<resources>
    <string name="app_name">Billing</string>
    <string name="title_additem">Add Food</string>
    <string name="title_foodmenu">Menu</string>
    <string name="title_cart">Cart</string>
    <string name="total">Total</string>
    <string name="created_by_flatplay">Created by FlatPlay</string>
    <string name="chart_by">Chart by</string>
    <string name="www_anychart_com">www.anychart.com</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add">ADD</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="_1000">$1000</string>
    <string name="day">/ day</string>
    <string name="printer_name">Printer Name</string>
    <string name="no_bluetooth_found">No Bluetooth Found</string>
    <string name="bluetooth_name">Bluetooth Name</string>
    <string name="apply">APPLY</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_name">Shop Name</string>
    <string name="b_i_l_l_i_n_g">B i l l i n g</string>
    <string name="_1">1</string>
    <string name="remove">Remove</string>
    <string name="grand_total">Grand Total</string>
    <string name="_100_00">$100.00</string>
    <string name="submit">SUBMIT</string>
    <string name="order_id_21">Order ID : 21</string>
    <string name="date_21_02_2020">Date : 21–02–2020</string>
    <string name="choco_lava_cake">Choco Lava Cake</string>
    <string name="rich_in_choclate_berrey_and_caramel_fillingrs">Rich in choclate, Berrey and Caramel fillingrs</string>
    <string name="_100">$100</string>
    <string name="print">Print</string>
    <string name="insight">Insight</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
</resources>
