<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_foodmenu">

    <fragment
        android:id="@+id/navigation_foodmenu"
        android:name="com.example.billing.ui.menuFra.MenuFragment"
        android:label="@string/title_foodmenu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_additem"
        android:name="com.example.billing.ui.addfood.addFoodFragment"
        android:label="@string/title_additem"
        tools:layout="@layout/fragment_addfood" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.billing.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>