<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.About">

    <ImageButton
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@mipmap/logo" />

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/created_by_flatplay"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/chart_by"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/www_anychart_com"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Supported Device"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:layout_below="@id/d"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" > Thermal Reciot Printer"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:layout_below="@id/e"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" > Printer width 58mm"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:layout_below="@id/f"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>

</RelativeLayout>