<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginTop="0px"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_weight="1">

            <TextView
                android:id="@+id/foodNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/choco_lava_cake"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/foodIngredientsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:maxLines="4"
                android:text="@string/rich_in_choclate_berrey_and_caramel_fillingrs"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/foodPriceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:text="@string/_100"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="0dp"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/deleteFoodImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_deletefood"
                    android:background="@color/colorWhite"/>

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>