<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8F2"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginTop="0px"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/cartFoodNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/choco_lava_cake"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <!--            <TextView-->
            <!--                android:id="@+id/cartFoodIngredientsView"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginBottom="10dp"-->
            <!--                android:fontFamily="sans-serif-light"-->
            <!--                android:maxLines="4"-->
            <!--                android:text="Rich in choclate, Berrey and Caramel fillingrs"-->
            <!--                android:textColor="@android:color/darker_gray"-->
            <!--                android:textSize="12sp" />-->

            <TextView
                android:id="@+id/cartFoodPriceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:text="@string/_100"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minWidth="0dp">

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:gravity="center">-->

            <!--                <Button-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="25dp"-->
            <!--                    android:background="@drawable/add_btn_ui"-->
            <!--                    android:fontFamily="@font/helvetica"-->
            <!--                    android:text="Add"-->
            <!--                    />-->

            <!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/add_btn_ui"
                    android:gravity="center"
                    android:padding="2dp">

                    <ImageButton

                        android:id="@+id/imageButtonDecrement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:src="@drawable/ic_removefood" />

                    <TextView
                        android:id="@+id/cartFoodQantityView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />


                    <ImageButton
                        android:id="@+id/imageButtonIncrement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:src="@drawable/ic_addfood" />

                </LinearLayout>

                <TextView
                    android:id="@+id/cartRemoveTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/remove"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>