<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.insight.InsightActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/totalListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <com.anychart.AnyChartView
                    android:id="@+id/any_chart_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    android:layout_margin="5dp"
                   app:cardBackgroundColor="@color/colorWhite"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_revenue"
                            android:textSize="20sp"
                            android:textColor="@color/colorGrey"
                            android:layout_gravity="center" />
                        <TextView
                            android:id="@+id/totalRevenue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1000"
                            android:textSize="20sp"
                            android:textColor="@color/colorBlack"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/revenueToday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1000"
                            android:textSize="25sp"
                            android:textColor="@color/colorBlack"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day"
                            android:textSize="20sp"
                            android:textColor="@color/colorGrey"
                            android:layout_gravity="center"/>
                    </LinearLayout>



                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>